--- a/backend/hostit-analytics/src/main/resources/static/index.html
+++ b/backend/hostit-analytics/src/main/resources/static/index.html
@@ -64,6 +64,9 @@
     </tr>
 </table>
 
+<h1>Average Data Usage</h1>
+<p id="averageDataUsage"></p>
+
 <script>
     function fetchFiles() {
         fetch('/api/files')
@@ -135,10 +138,20 @@
             .catch(error => console.error('Error fetching type percentage per user:', error));
     }
 
+    function fetchAverageDataUsagePerUser() {
+        fetch('/api/files/average-data-usage-per-user')
+            .then(response => response.json())
+            .then(data => {
+                document.getElementById('averageDataUsage').innerText = `Average data Usage for all users: ${data.toFixed(2)} bytes`;
+            })
+            .catch(error => console.error('Error fetching average data usage per user:', error));
+    }
+
     // Initial fetch of files and statistics
     fetchFiles();
     fetchFileSizePercentagePerUser();
     fetchFileTypePercentagePerUser();
+    fetchAverageDataUsagePerUser();
 </script>
 </body>
 </html>
