--- a/backend/hostit-analytics/src/main/resources/static/index.html
+++ b/backend/hostit-analytics/src/main/resources/static/index.html
@@ -42,7 +42,7 @@
     <tr>
         <th>Name</th>
         <th>Content Type</th>
-        <th>Size</th>
+        <th>Size (MB)</th>
         <th>Download</th>
     </tr>
 </table>
@@ -67,7 +67,43 @@
 <h1>Average Data Usage</h1>
 <p id="averageDataUsage"></p>
 
+<h1>Average File Size by Category</h1>
+<table id="averageFileSizeByCategoryTable">
+    <tr>
+        <th>Category</th>
+        <th>Average Size (MB)</th>
+    </tr>
+</table>
+
+<h1>Overall File Type Percentage</h1>
+<table id="overallFileTypePercentageTable">
+    <tr>
+        <th>Type</th>
+        <th>Percentage</th>
+    </tr>
+</table>
+
+<h1>File Quantity by Directory</h1>
+<table id="fileQuantityByDirectoryTable">
+    <tr>
+        <th>Directory</th>
+        <th>Quantity</th>
+    </tr>
+</table>
+
+<h1>File Quantity by User</h1>
+<table id="fileQuantityByUserTable">
+    <tr>
+        <th>User ID</th>
+        <th>Quantity</th>
+    </tr>
+</table>
+
 <script>
+    function bytesToMB(bytes) {
+        return (bytes / (1024 * 1024)).toFixed(2);
+    }
+
     function fetchFiles() {
         fetch('/api/files')
             .then(response => response.json())
@@ -77,7 +113,7 @@
                     <tr>
                         <th>Name</th>
                         <th>Content Type</th>
-                        <th>Size</th>
+                        <th>Size (MB)</th>
                         <th>Download</th>
                     </tr>`;
                 files.forEach(file => {
@@ -89,7 +125,7 @@
 
                     name.innerHTML = file.name;
                     contentType.innerHTML = file.contentType;
-                    size.innerHTML = file.size;
+                    size.innerHTML = bytesToMB(file.size);
                     download.innerHTML = `<a href="${file.downloadUri}">Download</a>`;
                 });
             })
@@ -142,9 +178,85 @@
         fetch('/api/files/average-data-usage-per-user')
             .then(response => response.json())
             .then(data => {
-                document.getElementById('averageDataUsage').innerText = `Average data Usage for all users: ${data.toFixed(2)} bytes`;
+                document.getElementById('averageDataUsage').innerText = `Average data usage for all users: ${bytesToMB(data)} MB`;
             })
             .catch(error => console.error('Error fetching average data usage per user:', error));
+    }
+
+    function fetchAverageFileSizeByCategory() {
+        fetch('/api/files/average-file-size-by-category')
+            .then(response => response.json())
+            .then(data => {
+                const table = document.getElementById('averageFileSizeByCategoryTable');
+                table.innerHTML = `
+                    <tr>
+                        <th>Category</th>
+                        <th>Average Size (MB)</th>
+                    </tr>`;
+                for (const [category, size] of Object.entries(data)) {
+                    const row = table.insertRow(-1);
+                    row.insertCell(0).innerHTML = category;
+                    row.insertCell(1).innerHTML = bytesToMB(size);
+                }
+            })
+            .catch(error => console.error('Error fetching average file size by category:', error));
+    }
+
+    function fetchOverallFileTypePercentage() {
+        fetch('/api/files/type-percentage-overall')
+            .then(response => response.json())
+            .then(data => {
+                const table = document.getElementById('overallFileTypePercentageTable');
+                table.innerHTML = `
+                    <tr>
+                        <th>Type</th>
+                        <th>Percentage</th>
+                    </tr>`;
+                for (const [type, percentage] of Object.entries(data)) {
+                    const row = table.insertRow(-1);
+                    row.insertCell(0).innerHTML = type;
+                    row.insertCell(1).innerHTML = percentage.toFixed(2) + '%';
+                }
+            })
+            .catch(error => console.error('Error fetching overall file type percentage:', error));
+    }
+
+    function fetchFileQuantityByDirectory() {
+        fetch('/api/files/file-quantity-by-directory')
+            .then(response => response.json())
+            .then(data => {
+                const table = document.getElementById('fileQuantityByDirectoryTable');
+                table.innerHTML = `
+                    <tr>
+                        <th>Directory</th>
+                        <th>Quantity</th>
+                    </tr>`;
+                for (const [directory, quantity] of Object.entries(data)) {
+                    const row = table.insertRow(-1);
+                    row.insertCell(0).innerHTML = directory;
+                    row.insertCell(1).innerHTML = quantity;
+                }
+            })
+            .catch(error => console.error('Error fetching file quantity by directory:', error));
+    }
+
+    function fetchFileQuantityByUser() {
+        fetch('/api/files/file-quantity-by-user')
+            .then(response => response.json())
+            .then(data => {
+                const table = document.getElementById('fileQuantityByUserTable');
+                table.innerHTML = `
+                    <tr>
+                        <th>User ID</th>
+                        <th>Quantity</th>
+                    </tr>`;
+                for (const [userId, quantity] of Object.entries(data)) {
+                    const row = table.insertRow(-1);
+                    row.insertCell(0).innerHTML = userId;
+                    row.insertCell(1).innerHTML = quantity;
+                }
+            })
+            .catch(error => console.error('Error fetching file quantity by user:', error));
     }
 
     // Initial fetch of files and statistics
@@ -152,6 +264,10 @@
     fetchFileSizePercentagePerUser();
     fetchFileTypePercentagePerUser();
     fetchAverageDataUsagePerUser();
+    fetchAverageFileSizeByCategory();
+    fetchOverallFileTypePercentage();
+    fetchFileQuantityByDirectory();
+    fetchFileQuantityByUser();
 </script>
 </body>
 </html>
