--- a/frontend/hostit_ui/web/index.html
+++ b/frontend/hostit_ui/web/index.html
@@ -37,6 +37,10 @@
       // The value below is injected by flutter build, do not touch.
       const serviceWorkerVersion = null;
     </script>
+
+    <script src="https://www.google.com/recaptcha/api.js?render=6Lee8vApAAAAAHfMFk5RyULEzIYWwcy17axfc2zR">
+    </script>
+
     <!-- This script adds the flutter initialization JS code -->
     <script src="flutter.js" defer></script>
   </head>
